src/test/deca/syntax/valid/03println.deca
{
    println("Bonjour tous le monde!");
}
