src/test/deca/syntax/invalid/renduInter01/04missing_semicolon_if.deca
{
    int x = 4;
    if ( x == 4 )
        println("hello if", x);
    else
        println("hello else", x);

}